created dropdown buttons for editing wrestlers

--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -73,7 +73,7 @@
 					randomly generated. (These are the only actual features available. The following are features the author is
 					working on). Create feuds between wrestlers, set up the schedule for your shows, and generate cards months
 					out of your schedule. </p>
-				<p>Lack of attention to plot detail is one of the greatest problems plauging modern American Pro Wrestling.
+				<p>Lack of attention to plot detail is one of the greatest problems plaguing modern American Pro Wrestling.
 					Famous Wrestling journalist Brandon Stroud of <%= link_to 'Uproxx', 'http://uproxx
 					.com/topic/best-and-worst-of-raw/' %> complains about that very thing more or less every week.
 				</p>
@@ -99,5 +99,3 @@
 -   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 -   See the License for the specific language governing permissions and
 -   limitations under the License.-->
-
-
