--- a/app/views/wrestlers/index.html.erb
+++ b/app/views/wrestlers/index.html.erb
@@ -374,7 +374,7 @@
 				</div>
 				<div class="row">
 					<div class="box">
-						<div class="col-lg-12">
+						<div class="col-lg-12 text-center">
 							<hr>
-<%= link_to 'New Wrestler', new_wrestler_path, class: "btn btn-large center-block btn-success" %>
+<%= link_to 'New Wrestler', new_wrestler_path, class: "btn btn-large text-center btn-success" %>
 </div></div></div>
