added colspan offsets

--- a/app/views/wrestlers/_form.html.erb
+++ b/app/views/wrestlers/_form.html.erb
@@ -40,7 +40,7 @@
 		<%= f.label "Main Event" %>
   </div>
   <div class="form-group">
-    <%= f.label :injured, "injured?" %><br>
+    <%= f.label :injured, "Injured?" %><br>
     <%= f.check_box :injured, class: "form-control" %>
   </div>
   <div class="actions">
