--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
 	<div class="box">
-		<div class="col-lg-12">
+		<div class="col-sm-6 col-sm-offset-3">
 <div class="authform">
   <%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :put }) do |f| %>
     <h3>Change your password</h3>
