--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -2,7 +2,7 @@
 <div class="authform">
 	<div class="row">
 		<div class="box">
-			<div class="col-lg-12">
+			<div class="col-sm-6 col-sm-offset-3">
   <h3>Edit <%= resource_name.to_s.humanize %></h3>
   <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put, :role => 'form'}) do |f| %>
     <%= devise_error_messages! %>
@@ -45,12 +45,13 @@
     <%= f.submit 'Update', :class => 'btn btn-large btn-right btn-primary' %>
   <% end %>
 </div>
-			<br><br><br><br><br>
+			<div class="col-sm-6 col-sm-offset-3">
 <div class="authform">
 <h3>Cancel Account</h3>
 <p>Unhappy? We'll be sad to see you go.</p>
 <%= button_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" },
 							:method => :delete, :class => 'btn btn-large btn-danger' %>
+</div>
 </div>
 </div>
 </div>
