--- a/app/views/wrestlers/edit.html.erb
+++ b/app/views/wrestlers/edit.html.erb
@@ -1,12 +1,9 @@
 <div class="row">
 	<div class="box">
-		<div class="col-lg-12">
+		<<div class="col-sm-6 col-sm-offset-3">
 <h1>Editing Wrestler</h1>
 
 <%= render 'form' %>
-			<br>
-<%= link_to 'Show', @wrestler, class: "btn btn-large btn-info" %> <br> <br>
-<%= link_to 'Back', wrestlers_path, class: "btn btn-large btn-danger	" %>
 		</div>
-	</div
+	</div>
 </dv>
