--- a/app/views/wrestlers/new.html.erb
+++ b/app/views/wrestlers/new.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
 	<div class="box">
-		<div class="col-lg-12">
+		<div class="col-sm-6 col-sm-offset-3">
 <h1>New Wrestler</h1>
 
 <%= render 'form' %>
