--- a/app/views/wrestlers/index.html.erb
+++ b/app/views/wrestlers/index.html.erb
@@ -339,7 +339,7 @@
 				</div>
 				<div class="row">
 					<div class="box">
-						< class="col-lg-12">
+						<div class="col-lg-12">
 							<hr>
 							<h3 class ="intro-text text-center"><u>Heels (Rudos)</u> </h3>
 							<%unless @undercard_heels.blank?  %>
