--- a/app/views/wrestlers/index.html.erb
+++ b/app/views/wrestlers/index.html.erb
@@ -160,7 +160,8 @@
 				<div class="col-lg-12">
 					<hr>
 					<h2 class="text-center">
-						<strong>Your Wrestlers in the Mid Card! </h2></strong>
+						<strong>Your Wrestlers in the Mid Card!</strong>
+					</h2>
 					<h3 class ="intro-text text-center"><u>Babyfaces (Tecnicos)</u> </h3>
 					<%unless @mid_card_babyfaces.blank?  %>
 						<% @mid_card_babyfaces.each do |wrestler|  %>
@@ -305,7 +306,8 @@
 						<div class="col-lg-12">
 							<hr>
 							<h2 class="text-center">
-								<strong>Your Wrestlers in the Undercard! </h2></strong>
+								<strong>Your Wrestlers in the Undercard!
+							</h2></strong>
 							<h3 class ="intro-text text-center"><u>Babyfaces (Tecnicos)</u> </h3>
 							<%unless @undercard_babyfaces.blank?  %>
 								<% @undercard_babyfaces.each do |wrestler|  %>
