--- a/app/views/cards/index.html.erb
+++ b/app/views/cards/index.html.erb
@@ -1,8 +1,8 @@
-<div class="containter">
+<div class="container">
 <div class="row">
 	<div class="box">
-		<div class="col-lg-12">
-			<table>
+		<div class="col-sm-8 col-sm-offset-2">
+			<table class="center">
 			<thead>
 				<tr>
 					<th colspan=5>
@@ -14,20 +14,20 @@
 			<% @card.matches.each do |match|  %>
 				<tr>
 					<%unless match.heel.blank? || match.babyface.blank?  %>
-						<td>
-							<%=image_tag match.babyface.image.url, class: "img-responsive avatar"  %>
+						<td class="avatar_cell_babyface">
+							<%=image_tag match.babyface.image.url, class: "img-responsive, avatar" %>
 						</td>
-						<td>
-							<h4 class="intro-text wrestler_name"><u><%=match.babyface.name %></u></h4>
+						<td class="wrestler_name_babyface">
+							<h4 class="intro-text"><u><%=match.babyface.name %></u></h4>
 						</td>
-						<td>
+						<td class="vs">
 							<h2>         VS.       </h2>
 						</td>
-						<td>
-							<h4 class="intro-text wrestler_name"><u><%=match.heel.name %></u></h4>
+						<td class="wrestler_name_heel">
+							<h4 class="intro-text"><u><%=match.heel.name %></u></h4>
 						</td>
-						<td>
-							<%=image_tag match.heel.image.url, class: "img-responsive avatar"  %>
+						<td class="avatar_cell_heel">
+							<%=image_tag match.heel.image.url, class: "img-responsive, avatar"%>
 						</td>
 					<%else  %>
 							<h2>Youd do not have enough wrestlers to have a match at this position. Hire a new wrestler,
