--- a/app/views/wrestlers/edit.html.erb
+++ b/app/views/wrestlers/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
 	<div class="box">
-		<<div class="col-sm-6 col-sm-offset-3">
+		<div class="col-sm-6 col-sm-offset-3">
 <h1>Editing Wrestler</h1>
 
 <%= render 'form' %>
