unborked those Rubocop changes. THANKS, RUBOCOP

--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -2,8 +2,8 @@
 <li><%= link_to 'Home', root_path %></li>
 <% if user_signed_in? %>
 	<li><%= link_to 'Roster Page', wrestlers_path %></li>
-		<li><%= link_to 'Generate Show', show_index_path %></li>
-  <li><%= link_to 'Edit account', edit_user_registration_path %></li>
+	<li><%= link_to 'Generate Show', show_index_path %></li>
+	<li><%= link_to 'View Shows', cards_path %>
   <li><%= link_to 'Sign out', destroy_user_session_path, :method=>'delete' %></li>
 <% else %>
   <li><%= link_to 'Sign in', new_user_session_path %></li>
