--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,7 +36,9 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12 text-center">
-					<p>Image attribution for the picture of <%= link_to 'Macho Man Randy Savage', ("https://c2.staticflickr
+					<p>
+            <%= link_to 'Edit account', edit_user_registration_path %><br>
+            Image attribution for the picture of <%= link_to 'Macho Man Randy Savage', ("https://c2.staticflickr
 					.com/4/3943/15400899809_b0fc02fcbd_b.jpg") %> goes to <%=link_to 'Alan Teo', ("https://www.flickr
 					.com/photos/alanosaur/15400899809/")  %> over at Flickr.<br>
 					Image attribution for the picture of <%= link_to 'Macho Man and Miss Elizabeth', ("http://orig10
