--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,7 +37,6 @@
 			<div class="row">
 				<div class="col-lg-12 text-center">
 					<p>
-            <%= link_to 'Edit Account', edit_user_registration_path %><br>
             Image attribution for the picture of <%= link_to 'Macho Man Randy Savage', ("https://c2.staticflickr
 					.com/4/3943/15400899809_b0fc02fcbd_b.jpg") %> goes to <%=link_to 'Alan Teo', ("https://www.flickr
 					.com/photos/alanosaur/15400899809/")  %> over at Flickr.<br>
@@ -45,9 +44,11 @@
 					.deviantart.net/38c4/f/2011/142/4/c/rest_in_peace_macho_man_by_jermainedivine-d3gzg4c.jpg") %> goes to
 						<%=link_to 'Jermaine Divine', ("http://jermainedivine.deviantart.com/art/Rest-In-Peace-Macho-Man-209926236")  %> over at Deviant
 						art.<br>
+            Logo courtesy of fellow Iron Yard graduate <%= link_to 'Derek Dyer', ('https://github.com/digitaldrk')  %><br>
 					Copyright &copy; Michael E. Nash (許書聖） 2015 <br>
 					Would you like to learn more <%= link_to 'About', page_path('about') %> Cream of the Crop and its
-						author?</p>
+						author?
+          </p>
 				</div>
 			</div>
 		</div>
