--- a/app/views/cards/index.html.erb
+++ b/app/views/cards/index.html.erb
@@ -6,35 +6,189 @@
 			<thead>
 				<tr>
 					<th colspan=5>
-						<h1 class="text-center"> Card Number: <%= @card.id %></h1>
+						<h1 class="text-center text-danger"> Bash at the <strong>BASH!</strong></h1>
+						<h2 class="text-center text-danger"> Saturday, July 25th</h2>
+						<h3 class="text-center text-danger"><strong>LIVE</strong> at the Lakeland Armory</h3>
 					</th>
 				</tr>
 			</thead>
 			<tbody>
-			<% @card.matches.each do |match|  %>
 				<tr>
-					<%unless match.heel.blank? || match.babyface.blank?  %>
+					<%unless @card.matches[0].heel.blank? || @card.matches[0].babyface.blank?  %>
 						<td class="avatar_cell_babyface">
-							<%=image_tag match.babyface.image.url, class: "img-responsive, avatar" %>
+							<%=image_tag @card.matches[0].babyface.image.url, class: "img-responsive, avatar" %>
 						</td>
 						<td class="wrestler_name_babyface">
-							<h4 class="intro-text"><u><%=match.babyface.name %></u></h4>
+							<h4 class="intro-text text-danger"><u><%=@card.matches[0].babyface.name %></u></h4>
 						</td>
 						<td class="vs">
 							<h2>         VS.       </h2>
 						</td>
 						<td class="wrestler_name_heel">
-							<h4 class="intro-text"><u><%=match.heel.name %></u></h4>
+							<h4 class="intro-text text-danger"><u><%=@card.matches[0].heel.name %></u></h4>
 						</td>
 						<td class="avatar_cell_heel">
-							<%=image_tag match.heel.image.url, class: "img-responsive, avatar"%>
+							<%=image_tag @card.matches[0].heel.image.url, class: "img-responsive, avatar"%>
 						</td>
 					<%else  %>
 							<h2>Youd do not have enough wrestlers to have a match at this position. Hire a new wrestler,
 								turn a face heel, or turn a heel face</h2>
 					<%end  %>
 					</tr>
-			<%end %>
+					<tr>
+						<%unless @card.matches[1].heel.blank? || @card.matches[1].babyface.blank?  %>
+							<td class="avatar_cell_babyface">
+								<%=image_tag @card.matches[1].babyface.image.url, class: "img-responsive, avatar" %>
+							</td>
+							<td class="wrestler_name_babyface">
+								<h4 class="intro-text text-danger"><u><%=@card.matches[1].babyface.name %></u></h4>
+							</td>
+							<td class="vs">
+								<h2>         VS.       </h2>
+							</td>
+							<td class="wrestler_name_heel">
+								<h4 class="intro-text text-danger"><u><%=@card.matches[1].heel.name %></u></h4>
+							</td>
+							<td class="avatar_cell_heel">
+								<%=image_tag @card.matches[1].heel.image.url, class: "img-responsive, avatar"%>
+							</td>
+						<%else  %>
+								<h2>Youd do not have enough wrestlers to have a match at this position. Hire a new wrestler,
+									turn a face heel, or turn a heel face</h2>
+						<%end  %>
+						</tr>
+						<tr>
+							<%unless @card.matches[2].heel.blank? || @card.matches[2].babyface.blank?  %>
+								<td class="avatar_cell_babyface">
+									<%=image_tag @card.matches[2].babyface.image.url, class: "img-responsive, avatar" %>
+								</td>
+								<td class="wrestler_name_babyface">
+									<h4 class="intro-text text-danger"><u><%=@card.matches[2].babyface.name %></u></h4>
+								</td>
+								<td class="vs">
+									<h2>         VS.       </h2>
+								</td>
+								<td class="wrestler_name_heel">
+									<h4 class="intro-text text-danger"><u><%=@card.matches[2].heel.name %></u></h4>
+								</td>
+								<td class="avatar_cell_heel">
+									<%=image_tag @card.matches[2].heel.image.url, class: "img-responsive, avatar"%>
+								</td>
+							<%else  %>
+									<h2>Youd do not have enough wrestlers to have a match at this position. Hire a new wrestler,
+										turn a face heel, or turn a heel face</h2>
+							<%end  %>
+							</tr>
+							<tr>
+								<%unless @card.matches[3].heel.blank? || @card.matches[3].babyface.blank?  %>
+									<td class="avatar_cell_babyface">
+										<%=image_tag @card.matches[3].babyface.image.url, class: "img-responsive, avatar" %>
+									</td>
+									<td class="wrestler_name_babyface">
+										<h4 class="intro-text text-danger"><u><%=@card.matches[3].babyface.name %></u></h4>
+									</td>
+									<td class="vs">
+										<h2>         VS.       </h2>
+									</td>
+									<td class="wrestler_name_heel">
+										<h4 class="intro-text text-danger"><u><%=@card.matches[3].heel.name %></u></h4>
+									</td>
+									<td class="avatar_cell_heel">
+										<%=image_tag @card.matches[3].heel.image.url, class: "img-responsive, avatar"%>
+									</td>
+								<%else  %>
+										<h2>Youd do not have enough wrestlers to have a match at this position. Hire a new wrestler,
+											turn a face heel, or turn a heel face</h2>
+								<%end  %>
+								</tr>
+								<tr>
+									<%unless @card.matches[4].heel.blank? || @card.matches[4].babyface.blank?  %>
+										<td class="avatar_cell_babyface">
+											<%=image_tag @card.matches[4].babyface.image.url, class: "img-responsive, avatar" %>
+										</td>
+										<td class="wrestler_name_babyface">
+											<h4 class="intro-text text-danger"><u><%=@card.matches[4].babyface.name %></u></h4>
+										</td>
+										<td class="vs">
+											<h2>         VS.       </h2>
+										</td>
+										<td class="wrestler_name_heel">
+											<h4 class="intro-text text-danger"><u><%=@card.matches[4].heel.name %></u></h4>
+										</td>
+										<td class="avatar_cell_heel">
+											<%=image_tag @card.matches[4].heel.image.url, class: "img-responsive, avatar"%>
+										</td>
+									<%else  %>
+											<h2>Youd do not have enough wrestlers to have a match at this position. Hire a new wrestler,
+												turn a face heel, or turn a heel face</h2>
+									<%end  %>
+									</tr>
+									<tr>
+										<%unless @card.matches[5].heel.blank? || @card.matches[5].babyface.blank?  %>
+											<td class="avatar_cell_babyface">
+												<%=image_tag @card.matches[5].babyface.image.url, class: "img-responsive, avatar" %>
+											</td>
+											<td class="wrestler_name_babyface">
+												<h4 class="intro-text text-danger"><u><%=@card.matches[5].babyface.name %></u></h4>
+											</td>
+											<td class="vs">
+												<h2>         VS.       </h2>
+											</td>
+											<td class="wrestler_name_heel">
+												<h4 class="intro-text text-danger"><u><%=@card.matches[5].heel.name %></u></h4>
+											</td>
+											<td class="avatar_cell_heel">
+												<%=image_tag @card.matches[5].heel.image.url, class: "img-responsive, avatar"%>
+											</td>
+										<%else  %>
+												<h2>Youd do not have enough wrestlers to have a match at this position. Hire a new wrestler,
+													turn a face heel, or turn a heel face</h2>
+										<%end  %>
+										</tr>
+										<tr>
+											<%unless @card.matches[6].heel.blank? || @card.matches[6].babyface.blank?  %>
+												<td class="avatar_cell_babyface">
+													<%=image_tag @card.matches[6].babyface.image.url, class: "img-responsive, avatar" %>
+												</td>
+												<td class="wrestler_name_babyface">
+													<h4 class="intro-text text-danger"><u><%=@card.matches[6].babyface.name %></u></h4>
+												</td>
+												<td class="vs">
+													<h2>         VS.       </h2>
+												</td>
+												<td class="wrestler_name_heel">
+													<h4 class="intro-text text-danger"><u><%=@card.matches[6].heel.name %></u></h4>
+												</td>
+												<td class="avatar_cell_heel">
+													<%=image_tag @card.matches[6].heel.image.url, class: "img-responsive, avatar"%>
+												</td>
+											<%else  %>
+													<h2>Youd do not have enough wrestlers to have a match at this position. Hire a new wrestler,
+														turn a face heel, or turn a heel face</h2>
+											<%end  %>
+											</tr>
+											<tr>
+												<%unless @card.matches[7].heel.blank? || @card.matches[7].babyface.blank?  %>
+													<td class="avatar_cell_babyface">
+														<%=image_tag @card.matches[7].babyface.image.url, class: "img-responsive, avatar" %>
+													</td>
+													<td class="wrestler_name_babyface">
+														<h4 class="intro-text text-danger"><u><%=@card.matches[7].babyface.name %></u></h4>
+													</td>
+													<td class="vs">
+														<h2>         VS.       </h2>
+													</td>
+													<td class="wrestler_name_heel">
+														<h4 class="intro-text text-danger"><u><%=@card.matches[7].heel.name %></u></h4>
+													</td>
+													<td class="avatar_cell_heel">
+														<%=image_tag @card.matches[7].heel.image.url, class: "img-responsive, avatar"%>
+													</td>
+												<%else  %>
+														<h2>Youd do not have enough wrestlers to have a match at this position. Hire a new wrestler,
+															turn a face heel, or turn a heel face</h2>
+												<%end  %>
+												</tr>
 			</tbody>
 		</table>
 					</div>
