fixed some problems with picture uploading

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -40,6 +40,11 @@
   border-color: red;
 }
 
+.roster_image {
+  height: 286px;
+  width: 381px;
+}
+
 .vs {
   text-align: center;
   border-top: solid;
