fixed problem where error message didn't appear in the table

--- a/app/views/cards/index.html.erb
+++ b/app/views/cards/index.html.erb
@@ -31,8 +31,12 @@
 							<%=image_tag @card.matches[0].heel.image.url, class: "img-responsive, avatar"%>
 						</td>
 					<%else  %>
-							<h2>Youd do not have enough wrestlers to have a match at this position. Hire a new wrestler,
-								turn a face heel, or turn a heel face</h2>
+					<tr>
+						<td colspan="5" class="text-center error_row">
+						<p>Youd do not have enough wrestlers to have a match at this position. Hire a new wrestler,
+							turn a face heel, or turn a heel face</p>
+						</td>
+					</tr>
 					<%end  %>
 					</tr>
 					<tr>
@@ -53,8 +57,12 @@
 								<%=image_tag @card.matches[1].heel.image.url, class: "img-responsive, avatar"%>
 							</td>
 						<%else  %>
-								<h2>Youd do not have enough wrestlers to have a match at this position. Hire a new wrestler,
-									turn a face heel, or turn a heel face</h2>
+						<tr>
+							<td colspan="5" class="text-center error_row">
+							<p>Youd do not have enough wrestlers to have a match at this position. Hire a new wrestler,
+								turn a face heel, or turn a heel face</p>
+							</td>
+						</tr>
 						<%end  %>
 						</tr>
 						<tr>
@@ -75,8 +83,12 @@
 									<%=image_tag @card.matches[2].heel.image.url, class: "img-responsive, avatar"%>
 								</td>
 							<%else  %>
-									<h2>Youd do not have enough wrestlers to have a match at this position. Hire a new wrestler,
-										turn a face heel, or turn a heel face</h2>
+							<tr>
+								<td colspan="5" class="text-center error_row">
+								<p>Youd do not have enough wrestlers to have a match at this position. Hire a new wrestler,
+									turn a face heel, or turn a heel face</p>
+								</td>
+							</tr>
 							<%end  %>
 							</tr>
 							<tr>
@@ -97,8 +109,12 @@
 										<%=image_tag @card.matches[3].heel.image.url, class: "img-responsive, avatar"%>
 									</td>
 								<%else  %>
-										<h2>Youd do not have enough wrestlers to have a match at this position. Hire a new wrestler,
-											turn a face heel, or turn a heel face</h2>
+								<tr>
+									<td colspan="5" class="text-center error_row">
+									<p>Youd do not have enough wrestlers to have a match at this position. Hire a new wrestler,
+										turn a face heel, or turn a heel face</p>
+									</td>
+								</tr>
 								<%end  %>
 								</tr>
 								<tr>
@@ -119,8 +135,12 @@
 											<%=image_tag @card.matches[4].heel.image.url, class: "img-responsive, avatar"%>
 										</td>
 									<%else  %>
-											<h2>Youd do not have enough wrestlers to have a match at this position. Hire a new wrestler,
-												turn a face heel, or turn a heel face</h2>
+									<tr>
+										<td colspan="5" class="text-center error_row">
+										<p>Youd do not have enough wrestlers to have a match at this position. Hire a new wrestler,
+											turn a face heel, or turn a heel face</p>
+										</td>
+									</tr>
 									<%end  %>
 									</tr>
 									<tr>
@@ -141,8 +161,12 @@
 												<%=image_tag @card.matches[5].heel.image.url, class: "img-responsive, avatar"%>
 											</td>
 										<%else  %>
-												<h2>Youd do not have enough wrestlers to have a match at this position. Hire a new wrestler,
-													turn a face heel, or turn a heel face</h2>
+										<tr>
+											<td colspan="5" class="text-center error_row">
+											<p>Youd do not have enough wrestlers to have a match at this position. Hire a new wrestler,
+												turn a face heel, or turn a heel face</p>
+											</td>
+										</tr>
 										<%end  %>
 										</tr>
 										<tr>
@@ -163,8 +187,12 @@
 													<%=image_tag @card.matches[6].heel.image.url, class: "img-responsive, avatar"%>
 												</td>
 											<%else  %>
-													<h2>Youd do not have enough wrestlers to have a match at this position. Hire a new wrestler,
-														turn a face heel, or turn a heel face</h2>
+											<tr>
+												<td colspan="5" class="text-center error_row">
+												<p>Youd do not have enough wrestlers to have a match at this position. Hire a new wrestler,
+													turn a face heel, or turn a heel face</p>
+												</td>
+											</tr>
 											<%end  %>
 											</tr>
 											<tr>
@@ -185,8 +213,12 @@
 														<%=image_tag @card.matches[7].heel.image.url, class: "img-responsive, avatar"%>
 													</td>
 												<%else  %>
-														<h2>Youd do not have enough wrestlers to have a match at this position. Hire a new wrestler,
-															turn a face heel, or turn a heel face</h2>
+												<tr>
+													<td colspan="5" class="text-center error_row">
+													<p>Youd do not have enough wrestlers to have a match at this position. Hire a new wrestler,
+														turn a face heel, or turn a heel face</p>
+													</td>
+												</tr>
 												<%end  %>
 												</tr>
 			</tbody>
